add public url for npm build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npx del-cli ./dist",
-    "build": "parcel build ./src/index.html",
+    "build": "parcel build ./src/index.html --public-url /pixel/",
     "start": "parcel src/index.html -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
