--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "pixi.js": "^5.3.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^3.0.0",
+    "socket.io-client": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -37,7 +38,8 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
     "@types/express": "^4.17.8",
-    "@types/socket.io": "^2.1.8",
+    "@types/socket.io": "^2.1.11",
+    "@types/socket.io-client": "^1.4.34",
     "babel-cli": "^6.26.0",
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
