--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:client": "parcel watch src/client/index.html --out-dir dist/client",
-    "dev:server": "nodemon --watch src/server --exec babel-node src/server/index.ts",
+    "dev:server": "nodemon --watch src/server --exec babel-node --extensions \".ts\" src/server/index.ts",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
     "build:server": "rollup -c",
     "prebuild": "rm -rf dist",
