--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
