use parcel to bundle server code

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:client": "parcel watch src/client/index.html --out-dir dist/client",
     "dev:server": "nodemon --watch src/server --exec babel-node --extensions \".ts\" src/server/index.ts",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
-    "build:server": "rollup -c",
+    "build:server": "parcel build src/server/index.ts --out-dir dist --target node",
     "prebuild": "rm -rf dist",
     "build": "npm run build:client && npm run build:server",
     "build:start": "npm run build && npm start",
@@ -38,7 +38,6 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@rollup/plugin-typescript": "^6.1.0",
     "@types/express": "^4.17.8",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
@@ -46,12 +45,6 @@
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
-    "rollup": "^2.33.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "typescript": "^4.0.5"
   },
   "staticFiles": {
