--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,5 @@ cache:
   directories:
     - node_modules
 script:
+  - npm run test
   - npm run build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  keep_history: true
-  local_dir: dist
-  on:
-    branch: master
