--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 0",
     "dev:client": "parcel watch src/client/index.html --out-dir dist/client",
     "dev:server": "nodemon --watch src/server --exec babel-node --extensions \".ts\" src/server/index.ts",
+    "dev": "npm run dev:server & npm run dev:client",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
     "build:server": "parcel build src/server/index.ts --out-dir dist --target node",
     "prebuild": "rm -rf dist",
     "build": "npm run build:client && npm run build:server",
     "build:start": "npm run build && npm start",
-    "dev": "npm run dev:server & npm run dev:client"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -39,12 +39,15 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
     "babel-cli": "^6.26.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
   "staticFiles": {
@@ -54,5 +57,8 @@
         "staticPath": "res"
       }
     ]
+  },
+  "jest": {
+    "preset": "ts-jest"
   }
 }
