--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
   },
   "homepage": "https://github.com/ioneone/pixel#readme",
   "dependencies": {
+    "@pixi/core": "^5.3.3",
+    "@pixi/loaders": "^5.3.3",
+    "@pixi/ticker": "^5.3.3",
+    "@pixi/utils": "^5.3.3",
     "express": "^4.17.1",
+    "howler": "^2.2.1",
     "http": "0.0.1-security",
+    "pixi-sound": "^3.0.5",
     "pixi.js": "^5.3.3",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.0"
@@ -42,6 +48,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/express": "^4.17.8",
+    "@types/howler": "^2.2.1",
     "@types/jest": "^26.0.15",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
