--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "http": "0.0.1-security",
     "pixi.js": "^5.3.3",
     "socket.io": "^3.0.3",
-    "socket.io-client": "^3.0.0"
+    "socket.io-client": "^3.0.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -51,6 +52,7 @@
     "@types/jest": "^26.0.15",
     "@types/socket.io": "^2.1.11",
     "@types/socket.io-client": "^1.4.34",
+    "@types/uuid": "^8.3.0",
     "babel-cli": "^6.26.0",
     "canvas": "^2.6.1",
     "jest": "^26.6.3",
