--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,6 @@
 {   
   "presets": [
-    "@babel/preset-env",
     "@babel/preset-typescript"
   ],
-  "plugins": [
-    ["@babel/plugin-proposal-class-properties", { "loose": false }, "plugin-proposal-class-properties"]
-  ]
+  "plugins": ["@babel/plugin-transform-modules-commonjs"]
 }
