--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@types/express": "^4.17.8",
     "@types/howler": "^2.2.1",
@@ -54,7 +54,6 @@
     "@types/socket.io-client": "^1.4.34",
     "@types/uuid": "^8.3.0",
     "babel-cli": "^6.26.0",
-    "canvas": "^2.6.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
