--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/socket.io-client": "^1.4.34",
     "@types/uuid": "^8.3.0",
     "babel-cli": "^6.26.0",
+    "canvas": "^2.6.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
